--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.6",
     "@next/font": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.2",
